--- a/style.css
+++ b/style.css
@@ -1,5 +1,15 @@
+        .caja {
+            font-size: 20px;
+            color: red;
+            outline: 1px solid red;
+            width: 100px;
+            height: 100px;
+            border: 5px solid orange;
+            padding: 50px;
+            margin: 50px;
+        }
         aside a {
-            color: aquamarine;
+            color: rgb(21, 125, 91);
         }
         /* Ligadura fuerte, si o si scumple con esa estructura */
         header > nav > a {
@@ -7,25 +17,18 @@
 
         }
         body {
-            font-family: "Shadows Into Light", cursive;
+            font-family: "Lato", sans-serif;
             font-weight: 400;
             font-style: normal;
           }
           
         h1 {
-            color: lemonchiffon;
             color: rgba(218, 70, 100, 0.726);
-            outline: 1px solid blue;
-            height: 400px;
-            width: 100%;
-            border: 5px solid orange;
-            padding: 50px;
-            margin: 50px;
         }
 
         .texto-grande {
             font-size: 60px;
-
+            color: blue;
         }
 
         #texto-pequeno {
@@ -80,14 +83,51 @@
 
         .posicion-caja-2 {
             position: absolute;
-            left: 50px;
+            /* left: 50px; */
             border-color: blueviolet;
-            top: 0;
+            /* top: 0; */
+            bottom: 0;
+            right: 0;
         }
 
         .posicion-caja-3 {
             position: fixed;
-            top: 0;
-            left: 0;
-
+            bottom: 0;
+            right: 0;
         }
+
+        .alineacion {
+            /* text-align: left; 
+            text-align: center;
+            text-align: right;*/
+            text-align: justify;
+        }
+
+        .tamaño {
+            font-size: 40px;
+        }
+
+        .decoraciones {
+            text-decoration: wavy;
+        }
+
+    .perro-imagen{
+        height: 50px;
+    }
+
+    .cuadricula{
+        outline: 1px solid green;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        justify-items: center;
+        grid-template-rows: 100px 100px 100px  100px;
+        align-items: center;
+    }
+
+    .uno{
+        object-fit: cover;
+        grid-column: 1/3;
+        grid-row: 1/4;
+        height: 100%;
+    }
+        
